# AEP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PUBLISH-INSTRUCTIONS.md  README.md  WAKE-UP.md  pyproject.toml
constitution/: aep_constitution_v1_5_lts.json
docs/: benchmark-results.md  index.html  phase-1-1-perfected-verdict.md  v0.4-legion-convergence-2026-05-14.md
examples/keys/test/: ed25519-priv.pem  ed25519-pub.pem
examples/minimal-signed.aepkg/: aepkg.json  bag-info.txt
examples/minimal-signed.aepkg/cache/: index.meta.json
examples/minimal-signed.aepkg/contexts/: aep.context.jsonld
examples/minimal-signed.aepkg/data/: claims.jsonl  relations.jsonl  sources.jsonl  spans.jsonl
examples/minimal-signed.aepkg/ops/: events.jsonl
examples/minimal-signed.aepkg/validations/: runs.jsonl
examples/minimal-signed.aepkg/views/: claim-ledger.html  map.mmd  provenance-graph.mmd  summary.md
examples/minimal.aepkg/: aepkg.json  manifest-sha256.txt  ro-crate-metadata.json
examples/minimal.aepkg/cache/: index.meta.json
examples/minimal.aepkg/data/: claims.jsonl  relations.jsonl  sources.jsonl  spans.jsonl
examples/minimal.aepkg/ops/: events.jsonl
examples/minimal.aepkg/reviews/: reviews.jsonl
examples/minimal.aepkg/validations/: runs.jsonl
examples/minimal.aepkg/views/: claim-ledger.html  map.mmd  summary.md
hooks/: aep_post_tool_ledger.py  aep_pre_tool_guard.py  aep_pre_tool_guard_client.py  aep_pre_tool_guard_daemon_tcp.py  aep_precompact_kernel.py  aep_prompt_contract.py  aep_stop_doctor.py  defender_guard.py  doctrine_write_guard.py  truth_tag_required_guard.py
schemas/: a1_phase_boundary_fork_record.schema.json  a2_lesson_kernel.schema.json  a3_operator_directive_cue.schema.json  a5_recurrence_tier_counter.schema.json  a6_pilot_observation_TTL.schema.json  a7_doctrine_citation_drift_velocity.schema.json  a8_claim_srs_decay.schema.json  claim.schema.json  event.schema.json  f12_recall_layer_index.schema.json  f13_claim_runtime_falsifier.schema.json  f15_completion_attestation.schema.json  f15_criterion_witness_chain.schema.json  f16_attack_class_registry.schema.json  f17_packet_history_dag.schema.json  f18_source_provenance_graph.schema.json  f19_corpus_coverage_witness.schema.json  manifest.schema.json  rater_quorum_attestation.schema.json  regexical_memory.schema.json  relation.schema.json  review.schema.json  rubric_score_claim.schema.json  source.schema.json  span.schema.json  v1_2_aep_lite.schema.json  v1_2_bug_ontology.schema.json  v1_2_f20_bug_vaccine_kernel.schema.json  v1_2_f21_claim_enemy_pairing.schema.json  v1_2_f22_civilian_proof_card.schema.json  v1_2_f23_validator_adversary_mode.schema.json  v1_2_f24_evidence_rights_redaction.schema.json  v1_2_f25_trust_dial.schema.json  v1_2_f26_compatibility_passport.schema.json  v1_2_invariant_contract.schema.json  v1_2_policy_rego.schema.json  validation.schema.json
scripts/: _build_sibling_89_packet.py  _emit_final_pass_closure_hcrl_row.py  _emit_hcrl_row_11a.py  _emit_hcrl_row_14a.py  _emit_hcrl_terminal_final2.py  _emit_per_amendment_fixtures.py  _emit_v12_phase_7_hcrl_row_16.py  _emit_v15_lts_phase_11_12_hcrl_row.py  _emit_v15_wave17jj_hcrl_row.py  _emit_v15_wave18kk_hcrl_row.py  _emit_wave_9h_hcrl_row.py  _install_optimized_pre_tool_guard.py  _patch_prompt_contract_compact.py  _patch_v15_validators_with_common.py  _pilot_canonical_dag_wave18kk.py  _pilot_dag_anchor_wave18kk.py  _regen_step2_only.py  _safe_task_loader.py  _smoke_test_optimized_hook.py  _test_llm_judge_5_fp.py  _tmp_diana_huddle_smoke.md  _v11_hcrl_row9_emit.py  _v15_wave18kk_codex_prompt.txt  _verify_triple_match.py  _verify_v15_lts_phase_11_12_hcrl_row.py  _wave10q_audit.py  _wave10q_identify_remaining.py  _wave18kk_inspect_row7.py  _wave18kk_inspect_row7_prev.py  _wave6_aepkg_locations.py  _wave6_hcrl_emit.py  _wave6_inventory.err  _wave6_ledger_emit.py  _wave_q_depth2_smoketest.py  aep08_preflight_min.py  aep_doctor.py  aep_doctor_node.cjs  aep_doctor_perl.pl  aep_doctor_supreme.py  aep_pre_tool_guard_daemon.py  (+145 more)
scripts/_results/: citation_graph_features_result.json  falsifier_6_cross_agent_cites_result.json  falsifier_6_cross_agent_pagerank_rrf_result.json
spec/: AEP_v0_3_SPEC.md  AEP_v0_4_SPEC.md  AEP_v0_5_1_SPEC.md  AEP_v0_5_5_SPEC.md  AEP_v0_5_SPEC.md  AEP_v0_6_SPEC.md  AEP_v0_7_1_SPEC.md  AEP_v0_8_SPEC.md  AEP_v1_0_3_1_SPEC.md  AEP_v1_0_3_SPEC.md  AEP_v1_1_SPEC.md  AEP_v1_2_SPEC.md
src/aep/: __init__.py  build_index.py  convert_divomni_lesson.py  convert_html_lesson.py  convert_v0_3_to_v0_5.py  convert_v0_5_shallow_to_deep.py  counterexample_replay.py  falsifier_sandbox.py  jsonl_compact.py  reproduce.py  run_numeric_vectors.py  signing.py  transition_parser.py  validate.py  validate_v0_4.py  validate_v0_5.py  validate_v0_5_1.py  validate_v0_6.py  validate_v0_8.py  verification_receipt.py  views.py
src/aep_reference.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test_vectors/canonical-surface/: vectors.json
test_vectors/v0_5/: README.md
test_vectors/v0_5/A.1-json-canonical/: reject-duplicate-keys.json
test_vectors/v0_5/A.10-numeric-canonicalization/: README.md  vectors.json
tests/: test_conformance.py  test_v15_1_rc1_hook_unit_90plus.py  test_v15_daemon_mode_n1000.py  test_v15_gate7_production_n_prompt_injection.py  test_v15_gate8_production_n_hook_bypass.py  test_v15_gate9_production_n_sandbox_escape.py  test_v15_phase_7_to_10_integration.py  test_v15_phase_A_integration.py  test_v15_phase_B_integration.py  test_v15_spec_aepkg_byte_roundtrip.py
tools/: aep_cluster_combine.py  aep_shape_migrator.py  universal_aepify.py  universal_aepify_v2.py
verifiers/node/: package.json  preflight.cjs  verify.cjs
verifiers/rust/: Cargo.toml
verifiers/rust/src/: main.rs
viewer/: index.html
