[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aep-reference"
version = "0.7.1"
description = "AEP — Agent Evidence Packet — portable, schema-validated, content-addressed file format for AI agent memory. Reference implementation with Ed25519 signing, view derivation, JCS canonical-surface corpus, and cross-runtime Node.js verifier (13/13 byte-parity)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "AEP Contributors" }]
maintainers = [{ name = "AEP Contributors" }]
keywords = [
    "ai-agents",
    "evidence-packet",
    "content-addressed",
    "tamper-detection",
    "merkle-tree",
    "schema-validation",
    "json-ld",
    "ed25519",
    "provenance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/OnePunchForAll/AEP"
Repository = "https://github.com/OnePunchForAll/AEP"
Spec = "https://github.com/OnePunchForAll/AEP/blob/main/spec/AEP_v0_7_1_SPEC.md"
Issues = "https://github.com/OnePunchForAll/AEP/issues"

[project.scripts]
aep-validate = "aep.validate_v0_6:main"
aep-sign = "aep.signing:_cli_main"
aep-views = "aep.views:_cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aep = ["*.json", "*.jsonld"]
