[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aep-reference"
version = "1.5.0"
description = "AEP — Agent Evidence Packet — production-hardened (v1.5 LTS), portable, schema-validated, content-addressed file format for AI agent memory. Cross-runtime byte-parity across Python + Node + Perl. 5 PreToolUse enforcement hooks. Doctor cached p95 8.3 ms · cold p95 5.07 ms. 88.7% token reduction vs raw .md. 0/5,000 prompt-injection · 0/500 hook bypass · 0/1,200 sandbox escape · 1.0000 mutation catch · 0/8 fabrication across independent audits."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "AEP Contributors" }]
maintainers = [{ name = "AEP Contributors" }]
keywords = [
    "ai-agents",
    "evidence-packet",
    "content-addressed",
    "tamper-detection",
    "merkle-tree",
    "schema-validation",
    "json-ld",
    "ed25519",
    "provenance",
    "lts",
    "production-hardened",
    "cross-runtime",
    "hash-chained-receipts",
    "truth-tags",
    "agentic-file-system",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/OnePunchForAll/AEP"
Repository = "https://github.com/OnePunchForAll/AEP"
Showcase = "https://onepunchforall.github.io/AEP/"
"Spec — v0.8 (STABLE)"  = "https://github.com/OnePunchForAll/AEP/blob/main/spec/AEP_v0_8_SPEC.md"
"Spec — v1.0.3"         = "https://github.com/OnePunchForAll/AEP/blob/main/spec/AEP_v1_0_3_SPEC.md"
"Spec — v1.1 (LANDED)"  = "https://github.com/OnePunchForAll/AEP/blob/main/spec/AEP_v1_1_SPEC.md"
"Spec — v1.2 (PROPOSED)" = "https://github.com/OnePunchForAll/AEP/blob/main/spec/AEP_v1_2_SPEC.md"
"Constitution — v1.5 LTS" = "https://github.com/OnePunchForAll/AEP/blob/main/constitution/aep_constitution_v1_5_lts.json"
Issues = "https://github.com/OnePunchForAll/AEP/issues"

[project.scripts]
aep-validate = "aep.validate_v0_8:main"
aep-validate-v6 = "aep.validate_v0_6:main"
aep-sign = "aep.signing:_cli_main"
aep-views = "aep.views:_cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aep = ["*.json", "*.jsonld"]
